--- a/templates/room_settings/edit.html.twig
+++ b/templates/room_settings/edit.html.twig
@@ -16,3 +16,8 @@
         </section>
     </main>
 {% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('account') }}
+{% endblock %}
+
