--- a/templates/room/index.html.twig
+++ b/templates/room/index.html.twig
@@ -46,7 +46,8 @@
                             <div id="question-content" class="col-md-12 my-auto">
                                 {% if room.startedAt == null %}
                                     {% if room.host == app.user %}
-                                        <form id="start-game-form" action="{{ path('startGame', {id: room.id}) }}"method="POST">
+                                        <form id="start-game-form" action="{{ path('startGame', {id: room.id}) }}"
+                                              method="POST">
                                             <button type="submit" id="start-game-btn"
                                                     class="btn btn-light btn-lg rounded-pill mx-auto d-block text-primary">
                                                 <strong>Commencer</strong>
@@ -66,9 +67,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row w-100 justify-content-center" hidden>
-                    <button class="btn btn-primary btn-lg">Recommencer</button>
-                </div>
+
                 <div id="answerDiv" class="card shadow mt-auto mb-4 w-100" hidden>
                     <div class="card-body p-0 m-0">
                         <form action="{{ path('answerQuestion') }}" method="POST" id="answer-form">
