--- a/templates/home/_open_public_room.html.twig
+++ b/templates/home/_open_public_room.html.twig
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col col-5">
                     <a class="btn btn-outline-primary btn-sm" role="button"
-                       href="#{{ room.id }}">REJOINDRE</a>
+                       href="{{ path('room', {id: room.id}) }}">REJOINDRE</a>
                 </div>
             </div>
         </div>
