Add translation in english to main pages

--- a/templates/email/emailResetPassword.html.twig
+++ b/templates/email/emailResetPassword.html.twig
@@ -1,10 +1,10 @@
-<h1>Salut {{ player.pseudo }} !</h1>
+<h1>{% trans %}Salut  {% endtrans %}{{ player.pseudo }} !</h1>
 
-<p>Apparemment tu aurais quelques petits soucis pour te rappeler de ton mot de passe ?
-    Ne t'en fais pas nous sommes là pour toi ! Pour réinitialiser ton mot de passe, clique sur le lien suivant :</p>
+<p>{% trans %}Apparemment tu aurais quelques petits soucis pour te rappeler de ton mot de passe ?
+    Ne t'en fais pas nous sommes là pour toi ! Pour réinitialiser ton mot de passe, clique sur le lien suivant :{% endtrans %}</p>
 
 <a href="{{ url('resetPassword', {token: resetToken.token}) }}">{{ url('resetPassword', {token: resetToken.token}) }}</a>
 
-<p>Attention ce lien est éphémère, tout comme le bonheur :( Il expire dans : {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
+<p>{% trans %}Attention ce lien est éphémère, tout comme une série de victoire :( Il expire dans : {% endtrans %}{{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
 
-<p>Amuse toi bien, et surtout no rage !</p>
+<p>{% trans %}Amuse toi bien, et surtout no rage !{% endtrans %}</p>
