--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Réinitilisation du mot de passe{% endblock %}
+{% block title %}{% trans %}Réinitialisation du mot de passe{% endtrans %}{% endblock %}
 
 {% block body %}
     <div class="login-dark">
@@ -11,12 +11,11 @@
         {{ form_row(requestForm.login, {'label':false, 'attr':{'class':'form-control form-sign', 'placeholder':'Email'}})}}
         <div>
             <small>
-                Nous vous enverrons un email contenant un lien vous permettant de réinitialiser
-                votre mot de passe.
+                {% trans %}Nous vous enverrons un email contenant un lien vous permettant de réinitialiser votre mot de passe. {% endtrans %}
             </small>
         </div>
 
-        <button class="btn btn-primary">Confirmer l'envoi</button>
+        <button class="btn btn-primary">{% trans %}Confirmer l'envoi{% endtrans %}</button>
     {{ form_end(requestForm) }}
     </div>
 {% endblock %}
