--- a/templates/profilPassword/changePassword.html.twig
+++ b/templates/profilPassword/changePassword.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Changement de mot de pase
+    {% trans %}Changement de mot de passe{% endtrans %}
 {% endblock %}
 
 {% block body %}
@@ -16,10 +16,10 @@
                 {{ error.message | striptags }}
             </div>
         {% endfor %}
-        <div class="form-group"><label for="email">Mot de passe</label>{{ form_row(form.oldPassword, {'label':false, 'attr':{'class':'form-control form'}}) }}</div>
-        <div class="form-group"><label for="email">Nouveau mot de passe</label>{{ form_row(form.newPassword.first) }}</div>
-        <div class="form-group"><label for="email">Confirmer nouveau mot de passe</label>{{ form_row(form.newPassword.second)}}</div>
-        <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Modifier le mot de passe</button></div><a class="forgot" href="{{ path('account') }}">Annuler</a></form>
+        <div class="form-group"><label for="email">{% trans %}Mot de passe{% endtrans %}</label>{{ form_row(form.oldPassword, {'label':false, 'attr':{'class':'form-control form'}}) }}</div>
+        <div class="form-group"><label for="email">{% trans %}Nouveau mot de passe{% endtrans %}</label>{{ form_row(form.newPassword.first) }}</div>
+        <div class="form-group"><label for="email">{% trans %}Confirmer nouveau mot de passe{% endtrans %}</label>{{ form_row(form.newPassword.second)}}</div>
+        <div class="form-group"><button class="btn btn-primary btn-block" type="submit">{% trans %}Modifier le mot de passe{% endtrans %}</button></div><a class="forgot" href="{{ path('account') }}">{% trans %}Annuler{% endtrans %}</a></form>
     </div>
         {{ form_end(form) }}
 {% endblock %}
