--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}{% trans %}Réinitialiser votre mot de passe{% endtrans %}{% endblock %}
 
 {% block body %}
     <div class="login-dark">
@@ -14,10 +14,10 @@
                 {{ error.message | striptags }}
             </div>
         {% endfor %}
-        {{ form_row(resetForm.plainPassword.first, {'attr':{'class':'form-control form-sign', 'placeholder':'Mot de passe'}}) }}
-        {{ form_row(resetForm.plainPassword.second, {'attr':{'class':'form-control form-sign', 'placeholder':' Répéter le mot de passe'}}) }}
+        {{ form_row(resetForm.plainPassword.first, {'attr':{'class':'form-control form-sign', 'placeholder':'Mot de passe' | trans}}) }}
+        {{ form_row(resetForm.plainPassword.second, {'attr':{'class':'form-control form-sign', 'placeholder':' Répéter le mot de passe' | trans}}) }}
 
-        <div class="form-group"><button class="btn btn-primary btn-block">Réinitialiser le mot de passe</button></div></form>
+        <div class="form-group"><button class="btn btn-primary btn-block">{% trans %}Réinitialiser le mot de passe{% endtrans %}</button></div></form>
     </div>
     {{ form_end(resetForm) }}
 {% endblock %}
