--- a/templates/security/signUp.html.twig
+++ b/templates/security/signUp.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Inscription
+    {% trans %}Inscription{% endtrans %}
 {% endblock %}
 
 {% block body %}
@@ -17,18 +17,18 @@
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="icon ion-android-mail"></i></div>
             <div class="form-group">
-                {{ form_row(form.login, {'label':false, 'attr':{'class':'form-control form-sign', 'placeholder':'Email'}}) }}
+                {{ form_row(form.login, {'label':false, 'attr':{'class':'form-control form-sign', 'placeholder':'Email' | trans}}) }}
             </div>
         <div class="form-group">
-            {{ form_row(form.pseudo, {'label':false, 'attr':{'class':'form-control form-sign', 'placeholder':'Pseudo'}}) }}
+            {{ form_row(form.pseudo, {'label':false, 'attr':{'class':'form-control form-sign', 'placeholder':'Pseudo' | trans}}) }}
         </div>
             <div class="form-group">
-                {{ form_row(form.password.first, {'attr':{'placeholder':'Mot de passe'}}) }}
+                {{ form_row(form.password.first, {'attr':{'placeholder':'Mot de passe' | trans}}) }}
             </div>
             <div class="form-group">
-                {{ form_row(form.password.second, {'attr':{'placeholder':'Confirmer le mot de passe'}}) }}
+                {{ form_row(form.password.second, {'attr':{'placeholder':'Confirmer le mot de passe' | trans}}) }}
             </div>
-            <div class="form-group"><button class="btn btn-primary btn-block" type="submit">S'inscrire</button></div><a class="forgot" href="{{ path('signIn') }}">vous avez déjà un compte?</a></form>
+            <div class="form-group"><button class="btn btn-primary btn-block" type="submit">{% trans %}S'inscrire{% endtrans %}</button></div><a class="forgot" href="{{ path('signIn') }}">{% trans %}Vous avez déjà un compte ?{% endtrans %}</a></form>
     </div>
         {{ form_end(form) }}
 
