allow guest to play

--- a/templates/room/index.html.twig
+++ b/templates/room/index.html.twig
@@ -97,8 +97,13 @@
         <input type="submit" id="mercure-message-btn" value="Send"/>
     </form>
     <form id="call-answer-form" action="{{ path('pushAnswer') }}" method="post" hidden></form>
-    <div id="js-get-id-player" data-player-id="{{ app.user.id }}"></div>
-    <div id="js-get-username" data-username="{{ app.user.pseudo }}"></div>
+    {% if app.user is not same as null %}
+        <div id="js-get-id-player" data-player-id="{{ app.user.id }}"></div>
+        <div id="js-get-username" data-username="{{ app.user.pseudo }}"></div>
+    {% else %}
+        <div id="js-get-id-player" data-player-id="{{ guest.id }}"></div>
+        <div id="js-get-username" data-username="{{ guest.pseudo }}"></div>
+    {% endif %}
     <div id="js-get-id-room" data-room-id="{{ room.id }}"></div>
     <div id="js-get-id-host" data-host-id="{{ room.host.id }}"></div>
     <div id="js-get-nb-round" data-nb-round="{{ room.roomSettings.numberRound }}"></div>
