--- a/templates/account/profile.html.twig
+++ b/templates/account/profile.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Changement de mot de pase
+    Modification des informations du profil
 {% endblock %}
 
 {% block body %}
