--- a/templates/global/account.html.twig
+++ b/templates/global/account.html.twig
@@ -39,7 +39,7 @@
                                                                       class="btn btn-primary btn-danger">Déconnexion</a>
                 </div>
                 <div class="more-projects">
-                    <h3 class="text-center">Mes Paramètres de salon enregistrés</h3>
+                    <h3 class="text-center">Mes Paramètres de salons enregistrés</h3>
                     <div class="modal fade" role="dialog" tabindex="-1" id="modalCreateSettings">
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
@@ -49,93 +49,7 @@
                                                 aria-hidden="true">×</span></button>
                                 </div>
                                 <div class="modal-body" style="padding: 0;">
-                                    <form style="padding: 20px;">
-                                        <div class="form-group"><label for="email">Nom du profil de
-                                                paramètres</label><input class="form-control" type="email" id="name-3">
-                                        </div>
-                                        <div class="form-group"><label for="email">Nombre de joueurs
-                                                maximum</label><input class="form-control" type="email" id="email-6">
-                                        </div>
-                                        <div class="form-group"><label for="email">Nombre de tours</label><input
-                                                    class="form-control" type="email" id="email-7"></div>
-                                        <div class="form-group">
-                                            <div class="form-row">
-                                                <div class="col-md-6">
-                                                    <div class="form-check"><input class="form-check-input"
-                                                                                   type="checkbox"
-                                                                                   id="formCheck-58"><label
-                                                                class="form-check-label" for="formCheck-1">QUIZ</label>
-                                                    </div>
-                                                    <div class="souscheck">
-                                                        <div class="form-check"><input class="form-check-input"
-                                                                                       type="checkbox"
-                                                                                       id="formCheck-59"><label
-                                                                    class="form-check-label"
-                                                                    for="formCheck-1">Culture</label></div>
-                                                        <div class="souscheck">
-                                                            <div class="form-check"><input class="form-check-input"
-                                                                                           type="checkbox"
-                                                                                           id="formCheck-60"><label
-                                                                        class="form-check-label" for="formCheck-1">Histoire</label>
-                                                            </div>
-                                                            <div class="form-check"><input class="form-check-input"
-                                                                                           type="checkbox"
-                                                                                           id="formCheck-61"><label
-                                                                        class="form-check-label" for="formCheck-1">Géographie</label>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="souscheck">
-                                                        <div class="form-check"><input class="form-check-input"
-                                                                                       type="checkbox"
-                                                                                       id="formCheck-62"><label
-                                                                    class="form-check-label" for="formCheck-1">Divertissement</label>
-                                                        </div>
-                                                        <div class="souscheck">
-                                                            <div class="form-check"><input class="form-check-input"
-                                                                                           type="checkbox"
-                                                                                           id="formCheck-63"><label
-                                                                        class="form-check-label" for="formCheck-1">Cinéma</label>
-                                                            </div>
-                                                            <div class="form-check"><input class="form-check-input"
-                                                                                           type="checkbox"
-                                                                                           id="formCheck-64"><label
-                                                                        class="form-check-label"
-                                                                        for="formCheck-1">Serie</label></div>
-                                                            <div class="form-check"><input class="form-check-input"
-                                                                                           type="checkbox"
-                                                                                           id="formCheck-65"><label
-                                                                        class="form-check-label" for="formCheck-1">Jeux
-                                                                    vidéo</label></div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="souscheck">
-                                                        <div class="form-check"><input class="form-check-input"
-                                                                                       type="checkbox"
-                                                                                       id="formCheck-66"><label
-                                                                    class="form-check-label"
-                                                                    for="formCheck-1">Sport</label></div>
-                                                        <div class="souscheck">
-                                                            <div class="form-check"><input class="form-check-input"
-                                                                                           type="checkbox"
-                                                                                           id="formCheck-67"><label
-                                                                        class="form-check-label" for="formCheck-1">Basket</label>
-                                                            </div>
-                                                            <div class="form-check"><input class="form-check-input"
-                                                                                           type="checkbox"
-                                                                                           id="formCheck-68"><label
-                                                                        class="form-check-label"
-                                                                        for="formCheck-1">Foot</label></div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                                <div class="modal-footer">
-                                    <button class="btn btn-light" type="button" data-dismiss="modal">Annuler</button>
-                                    <button class="btn btn-primary btn-success" type="button">Créer</button>
+
                                 </div>
                             </div>
                         </div>
