add a placeholder in createRoom form

--- a/templates/room/createRoom.html.twig
+++ b/templates/room/createRoom.html.twig
@@ -23,7 +23,7 @@
 
 
                 <div class="form-group">
-                    {{ form_row(form_c.nameProfil,{'label':'Configurations enregistrés :', 'attr':{'class':'form-control '}}) }}
+                    {{ form_row(form_c.nameProfil,{'label':'Configurations enregistrées :', 'attr':{'class':'form-control '}}) }}
 
 
                 </div>
